--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
+    "react-youtube": "^7.14.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
