--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.4",
     "react-youtube": "^7.14.0",
     "styled-components": "^5.3.3"
