--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "next start",
     "lint": "next lint",
     "prod": "next build && next start"
-    
   },
   "dependencies": {
     "next": "12.0.8",
@@ -20,6 +19,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8"
   }
